--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "scripture-Hebrew"]
 	path = scripture-Hebrew
 	url = https://github.com/sword-2/tanach.us
+[submodule "scripture-Greek"]
+	path = scripture-Greek
+	url = https://github.com/sword-2/SBLGNT
